log/manifests/deployment-ping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      #volumes:
      #  - name: shared-pong
      #    persistentVolumeClaim:
      #      claimName: pong-claim
      containers:
        - name: pingpong
          image: mrousu/pingpong:abd42c0bf0264cf5c313d81b0deb5c570dac50ec
