log/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log
  template:
    metadata:
      labels:
        app: log
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
        - name: config
          configMap:
            name: log-configmap
            items:
              - key: 'information.txt'
                path: 'information.txt'
        #- name: shared-pong
        #  persistentVolumeClaim:
        #    claimName: pong-claim
      containers:
        - name: logoutput
          image: mrousu/logoutput:c948e7c1422150271fec9702cabd44582acdbf64
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
            - name: config
              mountPath: '/config'
              readOnly: true
            #- name: shared-pong
            #  mountPath: /usr/src/app/pongfiles
        - name: logsaver
          image: mrousu/logsaver:5c6df27e5bbe8519d318e12eace65e0498d56021
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
