log/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
