log/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: log-route
  namespace: exercises
spec:
  parentRefs:
    - name: log-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      backendRefs:
        - name: pingpong-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-svc
          port: 80
